@@ -1,6 +1,7 @@
 0.5.3:
 
-* [MCL] fixed SOCKET-LISTEN on vector addresses like #(0 0 0 0)
+* [MCL] Fixed SOCKET-LISTEN on vector addresses like #(0 0 0 0)
+* [MCL] Fixed WAIT-FOR-INPUT on passive sockets (stream-server-usocket)
 
 0.5.2:
 
